# OpenGLPong

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CopyFile.cmake
res/: Basic.shader  Circle.shader
src/: Ball.cpp  Ball.h  Color.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  IndexBuffer.cpp  IndexBuffer.h  Paddle.cpp  Paddle.h  Random.cpp  Random.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Time.cpp  Time.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
